--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -9,11 +9,12 @@ keywords:
     - c++
     - autotools
 packages:
-    - make
+    - make@3.81
     - gcc@4.6.3
     - binutils@2.22
     - automake@1.11.3
-    - autoconf
+    - autoconf@2.68
+    - libtool@2.4.2
 script: |
     sudo apt-get update -y
     sudo apt-get install make -y
@@ -22,8 +23,7 @@ script: |
     sudo apt-get install automake -y
     sudo apt-get install autoconf -y
     sudo apt-get install libtool -y
-    ld --version
-    gcc --version
+    g++ --version
     make --version
     autoconf --version    
     automake --version
